some changes of landing section

--- a/index.html
+++ b/index.html
@@ -42,17 +42,26 @@
 
 
     <!-- Landing -->
-    <section class="vh-100 d-flex align-items-center text-center text-white"
-        style="background-image: url('https://images.pexels.com/photos/102127/pexels-photo-102127.jpeg'); background-size: cover; background-position: center;">
-        <div class="container">
-            <h1 class="display-4 fw-bold mb-3">
-                Explore Our <span id="hero-text" class="hero-attract"></span> Collection
+    <section class="vh-100 hero-section d-flex align-items-center text-center text-white">
+        <div class="hero-overlay"></div>
+
+        <div class="container position-relative">
+            <h1 class="display-4 fw-bold mb-3 hero-title">
+                Explore Our
+                <span id="hero-text" class="hero-attract"></span>
+                Collection
             </h1>
-            <p class="lead">Immerse yourself in a world of color, creativity, and craftsmanship.</p>
-            <a href="#gallery" class="btn btn-lg mt-3 hero-btn">View
-                Gallery</a>
+
+            <p class="lead hero-sub">
+                Immerse yourself in a world of color, creativity, and craftsmanship.
+            </p>
+
+            <a href="#gallery" class="btn btn-lg mt-4 hero-btn">
+                View Gallery
+            </a>
         </div>
     </section>
+
 
     <!-- Gallery -->
     <section id="gallery" class="py-5 bg-light section-animate">
@@ -61,7 +70,7 @@
             <div class="row g-4" id="galleryRow">
                 <!-- Visible Paintings -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic1.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -75,7 +84,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic2.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -90,7 +99,7 @@
 
                 <!-- Extra Paintings for Load More -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic3.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -104,7 +113,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic4.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -118,7 +127,7 @@
                 </div>
 
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic5.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -131,7 +140,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                   <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic6.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
