--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item"><a class="nav-link fw-semibold modern-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link fw-semibold modern-link" href="#gallery">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link fw-semibold modern-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link fw-semibold modern-link" href="#gallery">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link fw-semibold modern-link" href="#artwork">Artwork</a></li>
                     <li class="nav-item"><a class="nav-link fw-semibold modern-link" href="#exhibition">Exhibition</a>
                     </li>
@@ -63,10 +63,38 @@
     </section>
 
 
+    <!-- About -->
+    <section id="about" class="about-modern section-animate">
+        <div class="container">
+            <h2 class="section-title">About Us</h2>
+
+            <div class="about-card">
+                <div class="about-image">
+                    <img src="./images/artshb logo.png" alt="Gallery Overview">
+                </div>
+
+                <div class="about-content">
+                    <p>
+                        Our gallery blends <strong>timeless classical art</strong> with bold modern expression.
+                        Each artwork carries history, emotion, and soul — curated to inspire creators,
+                        collectors, and dreamers alike.
+                    </p>
+
+                    <div class="contact-box">
+                        <a href="hello@artshb.com">hello@artshb.com</a>
+                        <a href="https://instagram.com/artsh.b" target="_blank">Instagram</a>
+                        <a href="https://facebook.com/hafsa.bilal.505928" target="_blank">Facebook</a>
+                        <a href="https://wa.me/+923213904833" target="_blank">WhatsApp</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Gallery -->
     <section id="gallery" class="py-5 bg-light section-animate">
         <div class="container">
-            <h2 class="text-center mb-5 fw-bold">Gallery</h2>
+            <h2 class="section-title">Our Gallery</h2>
             <div class="row g-4" id="galleryRow">
                 <!-- Visible Paintings -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
@@ -90,8 +118,8 @@
 
                             <div
                                 class="hover-box d-flex flex-column justify-content-center align-items-center text-center">
-                                <h5 class="fw-bold mb-1 text-white">Ocean Breeze</h5>
-                                <p class="text-white-50 small mb-0">Acrylic, 20x30 in.</p>
+                                <h5 class="fw-bold mb-1 text-white">Midnight Calm</h5>
+                                <p class="text-white-50 small mb-0">Acrylic artwork with deep blue shades</p>
                             </div>
                         </div>
                     </div>
@@ -105,8 +133,8 @@
 
                             <div
                                 class="hover-box d-flex flex-column justify-content-center align-items-center text-center">
-                                <h5 class="fw-bold mb-1 text-white">Ocean Breeze</h5>
-                                <p class="text-white-50 small mb-0">Acrylic, 20x30 in.</p>
+                                <h5 class="fw-bold mb-1 text-white">Golden Fields</h5>
+                                <p class="text-white-50 small mb-0">Rustic countryside landscape</p>
                             </div>
                         </div>
                     </div>
@@ -119,8 +147,8 @@
 
                             <div
                                 class="hover-box d-flex flex-column justify-content-center align-items-center text-center">
-                                <h5 class="fw-bold mb-1 text-white">Ocean Breeze</h5>
-                                <p class="text-white-50 small mb-0">Acrylic, 20x30 in.</p>
+                                <h5 class="fw-bold mb-1 text-white">Silent Horizon</h5>
+                                <p class="text-white-50 small mb-0">Minimalist sky & land composition</p>
                             </div>
                         </div>
                     </div>
@@ -133,21 +161,21 @@
 
                             <div
                                 class="hover-box d-flex flex-column justify-content-center align-items-center text-center">
-                                <h5 class="fw-bold mb-1 text-white">Ocean Breeze</h5>
-                                <p class="text-white-50 small mb-0">Acrylic, 20x30 in.</p>
+                                <h5 class="fw-bold mb-1 text-white">Crimson Dreams</h5>
+                                <p class="text-white-50 small mb-0">Bold red abstract expression</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                   <div class="card h-100 border-0 overflow-hidden product-card glass-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic6.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
                             <div
                                 class="hover-box d-flex flex-column justify-content-center align-items-center text-center">
-                                <h5 class="fw-bold mb-1 text-white">Ocean Breeze</h5>
-                                <p class="text-white-50 small mb-0">Acrylic, 20x30 in.</p>
+                                <h5 class="fw-bold mb-1 text-white">Ocean Whisper</h5>
+                                <p class="text-white-50 small mb-0">Soft waves, peaceful mood</p>
                             </div>
                         </div>
                     </div>
@@ -162,32 +190,16 @@
         </div>
     </section>
 
-    <!-- About -->
-    <section id="about" class="py-5 bg-white section-animate">
-        <div class="container">
-            <h2 class="text-center mb-5 fw-bold">About Our Gallery</h2>
-            <div class="row align-items-center">
-                <div class="col-md-6 mb-4 mb-md-0">
-                    <img src="./images/artshb logo.png" class="img-fluid rounded shadow" alt="Gallery Overview">
-                </div>
-                <div class="col-md-6">
-                    <p>Our gallery celebrates modern and classical art forms. We showcase unique paintings from emerging
-                        and renowned artists. Each piece tells a story, evoking emotion and inspiring creativity.
-                        Explore our collection and discover the perfect artwork for your space.</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Artwork Section -->
     <section id="artwork" class="py-5 bg-white section-animate">
         <div class="container">
-            <h2 class="text-center mb-5 fw-bold">Artwork</h2>
+            <h2 class="section-title">Art Collection</h2>
             <div class="row g-4">
 
                 <!-- Artwork Item 1 -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic7.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -202,7 +214,7 @@
 
                 <!-- Artwork Item 2 -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic8.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -217,7 +229,7 @@
 
                 <!-- Artwork Item 3 -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic9.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -237,12 +249,12 @@
     <!-- Exhibition Section -->
     <section id="exhibition" class="py-5 bg-light section-animate">
         <div class="container">
-            <h2 class="text-center mb-5 fw-bold">Exhibition</h2>
+            <h2 class="section-title">Featured Exhibit</h2>
             <div class="row g-4">
 
                 <!-- Exhibition 1 -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic10.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -257,7 +269,7 @@
 
                 <!-- Exhibition 2 -->
                 <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card h-100 border-0 shadow-sm overflow-hidden product-card">
+                    <div class="card h-100 border-0 overflow-hidden product-card glass-card">
                         <div class="position-relative">
                             <img src="./images/pic11.jpg" class="card-img-top img-fluid product-img" alt="Painting 1">
 
@@ -278,7 +290,7 @@
     <!-- FAQ -->
     <section id="faq" class="py-5 bg-light section-animate">
         <div class="container">
-            <h2 class="text-center mb-5 fw-bold">Frequently Asked Questions</h2>
+            <h2 class="section-title">FAQs</h2>
             <div class="accordion" id="faqAccordion">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="faq1">
