add the animation on the landing section

--- a/index.html
+++ b/index.html
@@ -75,10 +75,21 @@
 
                 <div class="about-content">
                     <p>
-                        Our gallery blends <strong>timeless classical art</strong> with bold modern expression.
-                        Each artwork carries history, emotion, and soul — curated to inspire creators,
-                        collectors, and dreamers alike.
+                        <span class="fw-bold px-3 py-1 rounded"
+                            style="background: linear-gradient(90deg, #f26e22, #ff9b4d); color: #fff;">
+                            A devoted daughter, loving wife, and caring mother with a deep passion for art.
+                        </span>
+                        <br><br>
+                        Every piece is created with heart, patience, and purpose. Specializing in custom artwork and
+                        commissioned pieces, each creation is thoughtfully designed to reflect emotion, meaning, and
+                        beauty.
+
+                        The work includes Islamic art, abstract expressions, and scenic compositions, blending tradition
+                        with creativity. Every artwork tells a story and is crafted to bring elegance and inspiration
+                        into your space.
                     </p>
+
+
 
                     <div class="contact-box">
                         <a href="hello@artshb.com">hello@artshb.com</a>
