--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artistry Gallery</title>
+    <title>ARTSHB</title>
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -353,7 +353,7 @@
     <!-- Contact -->
     <section id="contact" class="py-5 bg-white section-animate">
         <div class="container">
-            <h2 class="text-center mb-5 fw-bold">Contact Us</h2>
+            <h2 class="section-title">Contact Us</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <form>
