--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
 
                     <div class="contact-box">
-                        <a href="hello@artshb.com">hello@artshb.com</a>
-                        <a href="https://instagram.com/artsh.b" target="_blank">Instagram</a>
-                        <a href="https://facebook.com/hafsa.bilal.505928" target="_blank">Facebook</a>
-                        <a href="https://wa.me/+923213904833" target="_blank">WhatsApp</a>
+                        <a href="hello@artshb.com" class="hero-btn">hello@artshb.com</a>
+                        <a href="https://instagram.com/artsh.b" target="_blank" class="hero-btn">Instagram</a>
+                        <a href="https://facebook.com/hafsa.bilal.505928" target="_blank" class="hero-btn">Facebook</a>
+                        <a href="https://wa.me/+923213904833" target="_blank" class="hero-btn">WhatsApp</a>
                     </div>
                 </div>
             </div>
