add the mail functionality on the link of mail in the about section

--- a/index.html
+++ b/index.html
@@ -88,11 +88,8 @@
                         with creativity. Every artwork tells a story and is crafted to bring elegance and inspiration
                         into your space.
                     </p>
-
-
-
                     <div class="contact-box">
-                        <a href="hello@artshb.com" class="hero-btn">hello@artshb.com</a>
+                        <a href="mailto:hello@artshb.com" class="btn btn-primary hero-btn">hello@artshb.com</a>
                         <a href="https://instagram.com/artsh.b" target="_blank" class="hero-btn">Instagram</a>
                         <a href="https://facebook.com/hafsa.bilal.505928" target="_blank" class="hero-btn">Facebook</a>
                         <a href="https://wa.me/+923213904833" target="_blank" class="hero-btn">WhatsApp</a>
