--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <script src="https://elfsightcdn.com/platform.js" async></script>
 </head>
 
 <body>
@@ -62,6 +63,15 @@
         </div>
     </section>
 
+    <!-- Elfsight Section -->
+    <section class="elfsight-wrapper">
+        <div class="container">
+            <div class="elfsight-box">
+                <div class="elfsight-app-a0481a66-b902-4ab0-baa0-26acedf20589" data-elfsight-app-lazy>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- About -->
     <section id="about" class="about-modern section-animate">
